# bptree

./: Cargo.toml  README.md  bminus_tree.db  bplus_tree.db  package-lock.json  tree.db
backup/: bplus_tree.db
backup/2/: bminus_tree.db
src/: b_minus_node.rs  b_minus_tree.rs  btree.rs  main.rs  node.rs  pager.rs
src/bptree/: mod.rs  structure.rs
ui/: package-lock.json  package.json
ui/src/: App.tsx  App.tsx.backup  index.css
