[package]
name = "btrees"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bincode = "1.3.3"
bytes = "1.11.1"
chrono = "0.4"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rust-embed = { version = "8.6.0", features = ["axum", "axum-ex"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
